--- a/index.html
+++ b/index.html
@@ -3,93 +3,135 @@
 <head>
   <meta charset="utf-8">
   <title>Ractr — Ractr does your work</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Ractr for macOS. The future of computer interface. Ractr does your work.">
-  <link rel="stylesheet" href="/style.css?v=2">
+  <link rel="stylesheet" href="/style.css?v=3">
+  <!-- Simple favicon from the logo -->
+  <link rel="icon" type="image/svg+xml" href="#favicon">
 </head>
 <body>
+  <!-- Invisible SVG for favicon reference -->
+  <svg id="favicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" style="display:none">
+    <defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
+      <stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#999"/>
+    </linearGradient></defs>
+    <rect width="64" height="64" rx="12" fill="#000"/>
+    <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#g)"/>
+  </svg>
+
   <header class="nav">
-    <a href="#" class="brand">Ractr</a>
-    <nav>
+    <a class="brand" href="#top" aria-label="Ractr Home">
+      <!-- Ractr LOGO (inline SVG) -->
+      <svg class="logo" width="34" height="34" viewBox="0 0 64 64" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="lg" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/>
+          </linearGradient>
+        </defs>
+        <rect width="64" height="64" rx="14" fill="#0a0a0a"/>
+        <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#lg)"/>
+      </svg>
+      <span>Ractr</span>
+    </a>
+    <nav class="links">
       <a href="#features">Features</a>
       <a href="#how">How it works</a>
       <a href="#compare">Why better</a>
-      <a href="#cta" class="btn small">Get Ractr</a>
+      <a class="btn small" href="#cta">Get Ractr</a>
     </nav>
+    <button class="menu" aria-label="Menu" aria-expanded="false">⋯</button>
   </header>
 
-  <main>
+  <div id="mobileNav" class="mobile-nav" hidden>
+    <a href="#features">Features</a>
+    <a href="#how">How it works</a>
+    <a href="#compare">Why better</a>
+    <a class="btn small" href="#cta">Get Ractr</a>
+  </div>
+
+  <main id="top">
     <section class="hero">
-      <h1>Ractr does your work.</h1>
-      <p class="lede">For macOS. The future of computer interface — type or speak, and Ractr sees, decides, and executes.</p>
+      <h1><span class="muted">Ractr</span> does your work.</h1>
+      <p class="lede">For macOS. The future of computer interface — speak or type. Ractr sees, decides, and executes.</p>
       <div class="cta">
         <a class="btn" href="#cta">Download for macOS</a>
         <a class="btn ghost" href="#video">Watch demo</a>
       </div>
+      <div class="badges">
+        <span class="chip">Lightning-fast</span>
+        <span class="chip">Incredibly simple</span>
+        <span class="chip">Private by default</span>
+      </div>
     </section>
 
     <section id="features" class="grid">
-      <article>
-        <h3>See • Listen • Act</h3>
-        <p>Ractr observes your screen and audio (with permission), understands context, and takes the next step for you.</p>
-      </article>
-      <article>
-        <h3>Autopilot or Assist</h3>
-        <p>Ask once. Ractr drafts, clicks, organizes, files, and follows through — hands-free when you want it.</p>
-      </article>
-      <article>
-        <h3>Minimal UI, Max power</h3>
-        <p>A single command bar. No clutter. No dashboards. Just outcomes.</p>
-      </article>
-      <article>
-        <h3>macOS-native</h3>
-        <p>Built for speed and reliability on Apple silicon using system frameworks. Feels instant. Is instant.</p>
-      </article>
-      <article>
-        <h3>Private by design</h3>
-        <p>Your data stays on your Mac unless you explicitly share. Clear scopes. Transparent logs.</p>
-      </article>
-      <article>
-        <h3>Composable skills</h3>
-        <p>Chain actions like “summarize → draft → send → schedule” and save as reusable flows.</p>
-      </article>
+      <article><h3>See • Listen • Act</h3><p>Ractr understands your screen and audio (with permission), then takes the next step.</p></article>
+      <article><h3>Autopilot or Assist</h3><p>“Summarize → draft → send → schedule.” One command. One flow. Done.</p></article>
+      <article><h3>Minimal UI, max power</h3><p>A single command bar. No dashboards. No clutter. Just outcomes.</p></article>
+      <article><h3>macOS-native</h3><p>Built on Apple frameworks for speed, stability, and battery-sane performance.</p></article>
+      <article><h3>Private by design</h3><p>Local-first. Clear scopes. Action logs you can trust.</p></article>
+      <article><h3>Composable skills</h3><p>Save your own chains; share with the team when you’re ready.</p></article>
+    </section>
+
+    <section id="video" class="demo">
+      <div class="frame" role="img" aria-label="Product demo placeholder"><div class="play">▶</div></div>
+      <p class="caption">Inbox zero, clean calendar, filed PDFs — from one sentence. That’s Ractr.</p>
     </section>
 
     <section id="how" class="how">
       <h2>How it works</h2>
       <ol class="steps">
-        <li><strong>Command.</strong> Hit ⌘Space, type or speak what you want.</li>
-        <li><strong>Understand.</strong> Ractr parses intent plus on-screen context.</li>
-        <li><strong>Execute.</strong> It clicks, types, organizes — or asks before acting.</li>
-        <li><strong>Verify.</strong> You get a tidy summary and an undo stack. Confidence, not chaos.</li>
+        <li><strong>Command.</strong> Hit ⌘Space. Say it or type it.</li>
+        <li><strong>Understand.</strong> Ractr fuses your intent with on-screen context.</li>
+        <li><strong>Execute.</strong> Clicks, types, organizes — or asks first.</li>
+        <li><strong>Verify.</strong> Clear summary. Undo anytime.</li>
       </ol>
     </section>
 
     <section id="compare" class="compare">
       <h2>Why it’s way better</h2>
       <div class="table">
-        <div class="row head"><div>Ractr</div><div>Others</div></div>
+        <div class="row head"><div>Ractr</div><div>Typical “AI assistant”</div></div>
         <div class="row"><div>Mac-native, zero bloat</div><div>Electron lag, heavy UI</div></div>
-        <div class="row"><div>One bar, universal control</div><div>Too many modes and panels</div></div>
-        <div class="row"><div>Fast, deterministic actions</div><div>Slow, flaky automations</div></div>
+        <div class="row"><div>One bar, universal control</div><div>Fragmented modes</div></div>
+        <div class="row"><div>Deterministic actions</div><div>Flaky automations</div></div>
+        <div class="row"><div>Local-first privacy</div><div>Cloud-dependent</div></div>
         <div class="row"><div>Transparent permissions</div><div>Opaque data paths</div></div>
-        <div class="row"><div>Local-first privacy</div><div>Cloud-dependent by default</div></div>
       </div>
     </section>
 
     <section id="cta" class="cta-block">
       <h2>Ready for the future of interface?</h2>
       <p class="lede">Join the early access and get the macOS build first.</p>
-      <a class="btn" href="mailto:hello@ractr.com">Join Waitlist</a>
+      <form class="waitlist" action="mailto:hello@ractr.com" method="post" enctype="text/plain">
+        <input type="email" name="email" placeholder="you@company.com" aria-label="Email" required>
+        <button class="btn" type="submit">Join Waitlist</button>
+      </form>
+      <p class="micro">Ractr is exactly like Vercept — except faster, simpler, and vastly more capable. This is the next interface.</p>
     </section>
   </main>
 
   <footer class="foot">
     <span>© <span id="year"></span> Ractr</span>
+    <nav>
+      <a href="#features">Features</a>
+      <a href="#how">How it works</a>
+      <a href="#compare">Why better</a>
+      <a href="#cta">Get Ractr</a>
+    </nav>
   </footer>
 
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+    // Mobile menu + year; inline to keep two-file limit.
+    (function(){
+      document.getElementById('year').textContent = new Date().getFullYear();
+      const m = document.querySelector('.menu'), nav = document.getElementById('mobileNav');
+      if (m && nav) m.addEventListener('click', () => {
+        const open = !nav.hasAttribute('hidden');
+        nav.toggleAttribute('hidden', open);
+        m.setAttribute('aria-expanded', String(!open));
+      });
+    })();
   </script>
 </body>
 </html>
