--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <input type="email" name="email" placeholder="you@company.com" aria-label="Email" required>
         <button class="btn" type="submit">Join Waitlist</button>
       </form>
-      <p class="micro">Ractr is exactly like Vercept — except faster, simpler, and vastly more capable.</p>
+      <p class="micro">Ractr is like Vercept — except faster, simpler, and vastly more capable.</p>
     </section>
   </main>
 
