--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
   <title>Ractr — Ractr does your work</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Ractr for macOS. The future of computer interface. Ractr does your work.">
-  <link rel="stylesheet" href="/style.css?v=4">
+  <link rel="stylesheet" href="/style.css?v=6">
   <link rel="icon" type="image/svg+xml" href="#favicon">
 </head>
 <body>
-  <!-- Favicon source -->
+  <!-- favicon source -->
   <svg id="favicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" style="display:none">
-    <defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-      <stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/>
-    </linearGradient></defs>
+    <defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/></linearGradient></defs>
     <rect width="64" height="64" rx="12" fill="#000"/>
     <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#g)"/>
   </svg>
 
   <header class="nav">
     <a class="brand" href="#top" aria-label="Ractr Home">
-      <!-- SMASH logo -->
       <svg class="logo" width="34" height="34" viewBox="0 0 64 64" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-        <defs><linearGradient id="lg" x1="0" y1="0" x2="1" y2="1">
-          <stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/>
-        </linearGradient></defs>
+        <defs><linearGradient id="lg" x1="0" y1="0" x2="1" y2="1"><stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/></linearGradient></defs>
         <rect width="64" height="64" rx="14" fill="#0a0a0a"/>
         <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#lg)"/>
       </svg>
@@ -100,11 +95,16 @@
     <section id="cta" class="cta-block reveal">
       <h2>Ready for the future of interface?</h2>
       <p class="lede">Join the early access and get the macOS build first.</p>
-      <form class="waitlist" action="mailto:hello@ractr.com" method="post" enctype="text/plain">
+
+      <!-- REAL waitlist form via Formspree -->
+      <form id="waitlist" class="waitlist" action="https://formspree.io/f/xqalrjbo" method="POST">
         <input type="email" name="email" placeholder="you@company.com" aria-label="Email" required>
+        <input type="hidden" name="_subject" value="Ractr Waitlist">
         <button class="btn" type="submit">Join Waitlist</button>
+        <p id="msg" class="micro" role="status" aria-live="polite"></p>
       </form>
-      <p class="micro">Ractr is like Vercept — except faster, simpler, and vastly more capable.</p>
+
+      <p class="micro">Ractr is just like Vercept — except faster, simpler, and vastly more capable.</p>
     </section>
   </main>
 
@@ -123,26 +123,35 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 
     // Mobile menu
-    const m = document.querySelector('.menu'), nav = document.getElementById('mobileNav');
-    if (m && nav) m.addEventListener('click', () => {
-      const open = !nav.hasAttribute('hidden');
-      nav.toggleAttribute('hidden', open);
-      m.setAttribute('aria-expanded', String(!open));
-    });
+    const m=document.querySelector('.menu'), nav=document.getElementById('mobileNav');
+    if(m&&nav){ m.addEventListener('click',()=>{ const open=!nav.hasAttribute('hidden'); nav.toggleAttribute('hidden',open); m.setAttribute('aria-expanded',String(!open)); }); }
 
     // Smooth scroll
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
       a.addEventListener('click',e=>{
         const id=a.getAttribute('href').slice(1), el=document.getElementById(id);
-        if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth',block:'start'}); if(nav && !nav.hasAttribute('hidden')) nav.setAttribute('hidden',''); }
+        if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth',block:'start'}); if(nav&&!nav.hasAttribute('hidden')) nav.setAttribute('hidden',''); }
       });
     });
 
-    // Scroll-reveal (fast + mobile friendly)
-    const io = 'IntersectionObserver' in window ? new IntersectionObserver((entries)=>{
-      entries.forEach(x=>{ if(x.isIntersecting){ x.target.classList.add('in'); io.unobserve(x.target); } });
-    }, {threshold: 0.12}) : null;
-    document.querySelectorAll('.reveal').forEach(el=> io ? io.observe(el) : el.classList.add('in'));
+    // AJAX submit to Formspree (no redirect)
+    const form=document.getElementById('waitlist'); const msg=document.getElementById('msg');
+    if(form){
+      form.addEventListener('submit', async (e)=>{
+        e.preventDefault();
+        const email=form.elements.email.value.trim();
+        if(!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)){ msg.textContent='Enter a valid email.'; msg.style.color='#f88'; return; }
+        try{
+          const res=await fetch(form.action, {method:'POST', headers:{'Accept':'application/json'}, body:new FormData(form)});
+          if(res.ok){ msg.textContent='You’re in. We’ll email you soon.'; msg.style.color='#9f9'; form.reset(); }
+          else{ msg.textContent='Hmm, try again in a minute.'; msg.style.color='#f88'; }
+        }catch(err){ msg.textContent='Network hiccup. Try again.'; msg.style.color='#f88'; }
+      });
+    }
+
+    // Scroll-reveal
+    const io='IntersectionObserver'in window?new IntersectionObserver(es=>{es.forEach(x=>{if(x.isIntersecting){x.target.classList.add('in');io.unobserve(x.target);}})},{threshold:.12}):null;
+    document.querySelectorAll('.reveal').forEach(el=> io?io.observe(el):el.classList.add('in'));
   </script>
 </body>
 </html>
