--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Ractr for macOS. The future of computer interface. Ractr does your work.">
   <link rel="stylesheet" href="/style.css?v=7">
-  <link rel="icon" type="image/svg+xml" href="#favicon">
+  <link rel="icon" type="image/png" href="/favicon.png">
+<link rel="apple-touch-icon" href="/favicon.png">
+<meta name="theme-color" content="#000000">
 </head>
 <body>
   <!-- favicon source -->
