--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p id="msg" class="micro" role="status" aria-live="polite"></p>
       </form>
 
-      <p class="micro">Ractr is exactly like Vercept — except faster, simpler, and vastly more capable.</p>
+      <p class="micro">Ractr is like Vercept — except faster, simpler, and vastly more capable.</p>
     </section>
   </main>
 
