Revamp Ractr webpage structure and content
Updated the HTML structure and content for the Ractr webpage, including changes to the header, main sections, and footer. Adjusted meta tags, added new elements, and removed outdated sections.

--- a/index.html
+++ b/index.html
@@ -1,177 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Ractr — Ractr does your work</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta name="description" content="Ractr for macOS. The future of computer interface. Ractr does your work.">
-  <link rel="stylesheet" href="/style.css?v=7">
-  <link rel="icon" type="image/png" href="/favicon.png">
-<link rel="apple-touch-icon" href="/favicon.png">
-<meta name="theme-color" content="#000000">
+  <meta charset="UTF-8" />
+  <title>Ractr – Play Instantly</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- favicon source -->
-  <svg id="favicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" style="display:none">
-    <defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/></linearGradient></defs>
-    <rect width="64" height="64" rx="12" fill="#000"/>
-    <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#g)"/>
-  </svg>
+  <div id="ractr-root">
+    <header class="ractr-header">
+      <div class="ractr-logo">RACTR</div>
+      <div class="ractr-tagline">Ractr does your work – and your game.</div>
+    </header>
 
-  <header class="nav">
-    <a class="brand" href="#top" aria-label="Ractr Home">
-      <svg class="logo" width="34" height="34" viewBox="0 0 64 64" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-        <defs><linearGradient id="lg" x1="0" y1="0" x2="1" y2="1"><stop offset="0" stop-color="#fff"/><stop offset="1" stop-color="#bfbfbf"/></linearGradient></defs>
-        <rect width="64" height="64" rx="14" fill="#0a0a0a"/>
-        <path d="M18 46V18h15c8 0 13 4.5 13 11.5 0 6-5 10.5-12.4 10.5H31l9.8 6H34L21 34.5V46h-3zm13-24h-10v9.5l10 0c5.2 0 8.6-2.6 8.6-6.9S36.2 22 31 22z" fill="url(#lg)"/>
-      </svg>
-      <span>Ractr</span>
-    </a>
-    <nav class="links">
-      <a href="#features">Features</a>
-      <a href="#how">How it works</a>
-      <a href="#compare">Why better</a>
-      <a class="btn small" href="#cta">Get Ractr</a>
-    </nav>
-    <button class="menu" aria-label="Open menu" aria-expanded="false">
-      <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-    </button>
-  </header>
+    <main class="ractr-main">
+      <!-- Fullscreen game canvas -->
+      <canvas id="ractr-canvas"></canvas>
 
-  <!-- starts hidden (CSS enforces it) -->
-  <div id="mobileNav" class="mobile-nav" hidden>
-    <a href="#features">Features</a>
-    <a href="#how">How it works</a>
-    <a href="#compare">Why better</a>
-    <a class="btn small" href="#cta">Get Ractr</a>
+      <!-- Simple overlay HUD -->
+      <div class="ractr-hud">
+        <div class="hud-left">
+          <span class="hud-label">Use WASD or arrows to move. Space to dash.</span>
+        </div>
+        <div class="hud-right">
+          <span id="hud-fps" class="hud-metric">FPS: --</span>
+        </div>
+      </div>
+    </main>
+
+    <footer class="ractr-footer">
+      <span>Ractr Engine · AI-driven game prototype</span>
+    </footer>
   </div>
 
-  <main id="top">
-    <section class="hero reveal">
-      <h1><span class="muted">Ractr</span> does your work.</h1>
-      <p class="lede">For macOS. The future of computer interface — speak or type. Ractr sees, decides, and executes.</p>
-      <div class="cta">
-        <a class="btn" href="#cta">Download for macOS</a>
-        <a class="btn ghost" href="#video">Watch demo</a>
-      </div>
-      <div class="badges">
-        <span class="chip">Lightning-fast</span>
-        <span class="chip">Incredibly simple</span>
-        <span class="chip">Private by default</span>
-      </div>
-    </section>
-
-    <section id="features" class="grid reveal">
-      <article class="card"><h3>See • Listen • Act</h3><p>Understands your screen and audio (with permission), then takes the next step.</p></article>
-      <article class="card"><h3>Autopilot or Assist</h3><p>“Summarize → draft → send → schedule.” One command. One flow. Done.</p></article>
-      <article class="card"><h3>Minimal UI, max power</h3><p>A single command bar. No dashboards. No clutter. Just outcomes.</p></article>
-      <article class="card"><h3>macOS-native</h3><p>Built on Apple frameworks for speed, stability, and battery-sane performance.</p></article>
-      <article class="card"><h3>Private by design</h3><p>Local-first. Clear scopes. Action logs you can trust.</p></article>
-      <article class="card"><h3>Composable skills</h3><p>Save your chains; share with the team when you’re ready.</p></article>
-    </section>
-
-    <section id="video" class="demo reveal">
-      <div class="frame">
-        <div class="coming">COMING&nbsp;SOON</div>
-        <div class="play" aria-hidden="true">▶</div>
-      </div>
-      <p class="caption">Inbox zero, clean calendar, filed PDFs — from one sentence. That’s Ractr.</p>
-    </section>
-
-    <section id="how" class="how reveal">
-      <h2>How it works</h2>
-      <ol class="steps">
-        <li><strong>Command.</strong> Hit ⌘Space. Say it or type it.</li>
-        <li><strong>Understand.</strong> Intent + on-screen context.</li>
-        <li><strong>Execute.</strong> Clicks, types, organizes — or asks first.</li>
-        <li><strong>Verify.</strong> Clear summary. Undo anytime.</li>
-      </ol>
-    </section>
-
-    <section id="compare" class="compare reveal">
-      <h2>Why it’s way better</h2>
-      <div class="table">
-        <div class="row head"><div>Ractr</div><div>Typical “AI assistant”</div></div>
-        <div class="row"><div>Mac-native, zero bloat</div><div>Electron lag, heavy UI</div></div>
-        <div class="row"><div>One bar, universal control</div><div>Fragmented modes</div></div>
-        <div class="row"><div>Deterministic actions</div><div>Flaky automations</div></div>
-        <div class="row"><div>Local-first privacy</div><div>Cloud-dependent</div></div>
-        <div class="row"><div>Transparent permissions</div><div>Opaque data paths</div></div>
-      </div>
-    </section>
-
-    <section id="cta" class="cta-block reveal">
-      <h2>Ready for the future of interface?</h2>
-      <p class="lede">Join the early access and get the macOS build first.</p>
-
-      <form id="waitlist" class="waitlist" action="https://formspree.io/f/xqalrjbo" method="POST">
-        <input type="email" name="email" placeholder="you@company.com" aria-label="Email" required>
-        <input type="hidden" name="_subject" value="Ractr Waitlist">
-        <button class="btn" type="submit">Join Waitlist</button>
-        <p id="msg" class="micro" role="status" aria-live="polite"></p>
-      </form>
-
-      <p class="micro">Ractr is like Vercept — except faster, simpler, and vastly more capable.</p>
-    </section>
-  </main>
-
-  <footer class="foot">
-    <div class="foot-left">Copyright © <span id="year"></span> Ractr</div>
-    <nav class="foot-nav">
-      <a href="#features">Features</a>
-      <a href="#how">How it works</a>
-      <a href="#compare">Why better</a>
-      <a href="#cta">Get Ractr</a>
-    </nav>
-  </footer>
-
+  <script src="engine/ractr_engine.js"></script>
+  <script src="engine/ractr_game.js"></script>
   <script>
-    // Year
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Mobile menu (guaranteed hidden by CSS)
-    const m=document.querySelector('.menu'), nav=document.getElementById('mobileNav');
-    if(m&&nav){
-      m.addEventListener('click',()=>{
-        const open=!nav.hasAttribute('hidden');
-        nav.toggleAttribute('hidden',open);
-        m.setAttribute('aria-expanded', String(!open));
-        document.body.style.overflow = open ? '' : 'hidden'; // lock scroll when menu open
-        m.classList.toggle('open', !open);
-      });
-      // Close when clicking a link
-      nav.querySelectorAll('a').forEach(a=>a.addEventListener('click',()=>{
-        nav.setAttribute('hidden',''); m.setAttribute('aria-expanded','false'); document.body.style.overflow='';
-        m.classList.remove('open');
-      }));
-    }
-
-    // Smooth scroll
-    document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click',e=>{
-        const id=a.getAttribute('href').slice(1), el=document.getElementById(id);
-        if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth',block:'start'}); }
-      });
+    // Boot the engine + game as soon as the page loads
+    window.addEventListener("load", () => {
+      const engine = new RactrEngine("ractr-canvas");
+      const game   = new RactrGame(engine);
+      engine.setGame(game);
+      engine.start();
     });
-
-    // AJAX submit to Formspree
-    const form=document.getElementById('waitlist'); const msg=document.getElementById('msg');
-    if(form){
-      form.addEventListener('submit', async (e)=>{
-        e.preventDefault();
-        const email=form.elements.email.value.trim();
-        if(!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)){ msg.textContent='Enter a valid email.'; msg.style.color='#f88'; return; }
-        try{
-          const res=await fetch(form.action, {method:'POST', headers:{'Accept':'application/json'}, body:new FormData(form)});
-          if(res.ok){ msg.textContent='You’re in. We’ll email you soon.'; msg.style.color='#9f9'; form.reset(); }
-          else{ msg.textContent='Hmm, try again in a minute.'; msg.style.color='#f88'; }
-        }catch{ msg.textContent='Network hiccup. Try again.'; msg.style.color='#f88'; }
-      });
-    }
-
-    // Scroll-reveal
-    const io='IntersectionObserver'in window?new IntersectionObserver(es=>{es.forEach(x=>{if(x.isIntersecting){x.target.classList.add('in');io.unobserve(x.target);}})},{threshold:.12}):null;
-    document.querySelectorAll('.reveal').forEach(el=> io?io.observe(el):el.classList.add('in'));
   </script>
 </body>
 </html>
