--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <script src="engine/ractr_state.js"></script>
   <script src="engine/ractr_entities.js"></script>
   <script src="engine/ractr_ui.js"></script>
+  <script src="engine/ractr_audio.js"></script>
   <script src="engine/ractr_net.js"></script>
   <script src="engine/ractr_game.js"></script>
   <script>
